--- a/templates/bill.html
+++ b/templates/bill.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="license" href="https://www.opensource.org/licenses/mit-license/">
 		<script src="script.js"></script>
-      <link rel="icon" href="images/logo1.png">
+      <link rel="icon" href="static/images/logo1.png">
     <style>
       /* reset */
       .button {
