--- a/templates/home.html
+++ b/templates/home.html
@@ -22,13 +22,13 @@
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/fontawesome-all.min.css" rel="stylesheet">
-    <link href="css/swiper.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/fontawesome-all.min.css" rel="stylesheet">
+    <link href="static/css/swiper.css" rel="stylesheet">
+	<link href="static/css/styles.css" rel="stylesheet">
 
 	<!-- Favicon  -->
-    <link rel="icon" href="images/logo1.png">
+    <link rel="icon" href="static/images/logo1.png">
 </head>
 <body>
 
@@ -38,20 +38,20 @@
 
     <!-- Header -->
     <header id="header" class="header">
-        <img class="decoration-star" src="images/decoration-star.svg" alt="alternative">
-        <img class="decoration-star-2" src="images/decoration-star.svg" alt="alternative">
+        <img class="decoration-star" src="static/images/decoration-star.svg" alt="alternative">
+        <img class="decoration-star-2" src="static/images/decoration-star.svg" alt="alternative">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-xl-5">
-                    <img class="img-fluid" src="images/de.png" alt="alternative" width="300" height="400">
+                    <img class="img-fluid" src="static/images/de.png" alt="alternative" width="300" height="400">
                 </div> <!-- end of col -->
                 <div class="col-lg-5 col-xl-7">
                     <div class="image-container">
                       <div class="text-container">
                           <h1 class="h1-large">Welcome Admin</h1>
 
-                          <a class="btn-solid-lg" href="bill.html">Product List</a>
-                          <a class="btn-outline-lg" href="invoice.html">Invoice</a>
+                          <a class="btn-solid-lg" href="bill">Product List</a>
+                          <a class="btn-outline-lg" href="invoice">Invoice</a>
                       </div> <!-- end of text-container -->
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
@@ -68,14 +68,14 @@
 
     <!-- Back To Top Button -->
     <button onclick="topFunction()" id="myBtn">
-        <img src="images/up-arrow.png" alt="alternative">
+        <img src="static/images/up-arrow.png" alt="alternative">
     </button>
     <!-- end of back to top button -->
 
     <!-- Scripts -->
-    <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-    <script src="js/purecounter.min.js"></script> <!-- Purecounter counter for statistics numbers -->
-    <script src="js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="static/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="static/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="static/js/purecounter.min.js"></script> <!-- Purecounter counter for statistics numbers -->
+    <script src="static/js/scripts.js"></script> <!-- Custom scripts -->
 </body>
 </html>
