--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="license" href="https://www.opensource.org/licenses/mit-license/">
 		<script src="script.js"></script>
-      <link rel="icon" href="images/logo1.png">
+      <link rel="icon" href="static/images/logo1.png">
     <style>
 
       /* reset */
@@ -181,7 +181,7 @@ tr:hover .cut { opacity: 1; }
 				<p>101 E. Chapman Ave<br>Orange, CA 92866</p>
 				<p>(800) 555-1234</p>
 			</address>
-			<span><img alt="" src="images/logo.png"></span>
+			<span><img alt="" src="static/images/logo.png"></span>
 		</header>
 		<article>
 			<h1>Recipient</h1>
