--- a/templates/bill.html
+++ b/templates/bill.html
@@ -177,7 +177,7 @@ tr:hover .cut { opacity: 1; }
 		<table class="inventory">
 		<tbody>
 			<tr>
-				<td><p>Enter Custmer Name</p></td>
+				<td width="500"><p>Enter Custmer Name</p></td>
 
 
 				<td><span contenteditable id="customer-name"></span></td>
@@ -188,7 +188,7 @@ tr:hover .cut { opacity: 1; }
 			<table class="inventory">
 				<thead>
 					<tr>
-						<th width="400"><p>Item</p></th>
+						<th width="500"><p>Item</p></th>
 
 
 						<th><p>Quantity</p></th>
@@ -197,7 +197,7 @@ tr:hover .cut { opacity: 1; }
 				</thead>
 				<tbody>
 					<tr>
-						<td width="400"><p class="product-name">Front End Consultation</p></td>
+						<td width="500"><p class="product-name">Front End Consultation</p></td>
 
 
 						<td><span contenteditable class="product-qty"></span> </span></td>
@@ -206,141 +206,141 @@ tr:hover .cut { opacity: 1; }
 				</tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span> </td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span> </td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span> </td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span> </td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody><tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody><tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody><tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody><tbody>
           <tr>
-            <td width="400"><p class="product-name">Front End Consultation</p></td>
+            <td width="500"><p class="product-name">Front End Consultation</p></td>
   <td><span contenteditable class="product-qty"></span></td>
           </tr>
         </tbody>
