--- a/templates/bill.html
+++ b/templates/bill.html
@@ -363,7 +363,9 @@ tr:hover .cut { opacity: 1; }
 	</body>
 	<script>
 		function submit() {
-			let data = {};
+			let data = {
+      };
+      data["type"] = 1
 			data["name"] = $("#customer-name").html()
 			let productInfo = []
 			for(let i=0; i < $(".product-name").length; i++){
@@ -378,15 +380,26 @@ tr:hover .cut { opacity: 1; }
       let format = window.location.href.split("/")
       let httpType = format[0]
       let hostName = format[2]
-      //format
-      $.post(httpType + "//" + hostName + "/billGenerator/?type="+1+"&data="+JSON.stringify(data), () => {
-        console.log("send")
+      var settings = {
+        "method": "POST",
+        "url": httpType + "//" + hostName + "/billGenerator/",
+        "timeout": 0,
+        "headers": {
+          "Content-Type": "application/json"
+        },
+        "data": JSON.stringify({
+          "data": data
+        }),
+      };
+    
+      $.ajax(settings).done(function (response) {
+        console.log(response);
         viewBill(httpType + "//" + hostName + "/billView/")
-      })
-		}
+      });
+    }
 
     function viewBill(link) {
-      window.open(link)
+        window.open(link)
     }
 	</script>
 </html>
